--- a/css/mobile-device.css
+++ b/css/mobile-device.css
@@ -54,17 +54,6 @@
 	
 	/*CSS FOR RESUME TAB*/
 	
-	.tab.home-button{
-		position:relative;
-		cursor:pointer;	
-		height:100%;
-		width:100%;
-		left:0%;
-		top:0%;
-		text-align:center;
-		font-size: 1.2em;
-	}
-	
 	#header{
 		position:relative;
 		background-color:#B0C4DE;
@@ -106,6 +95,25 @@
 	
 	#footer span{
 		position: relative;
-		top:50%;
+		top:50
+	}
+	
+	/***** CSS for projects *****/
+	
+	.tab.home-button{
+		position:relative;
+		cursor:pointer;	
+		height:100%;
+		width:100%;
+		left:0%;
+		top:0%;
+		text-align:center;
+		font-size: 1em;
+	}
+	
+	.project-list{
+		position:relative;
+		overflow-x:auto;
+		top:5%;
 	}
 }
