--- a/css/tablet-device.css
+++ b/css/tablet-device.css
@@ -59,17 +59,6 @@
 	}
 
 	/***** Resume content *****/
-	.tab.home-button{
-		position:relative;
-		cursor:pointer;	
-		height:100%;
-		width:100%;
-		left:0%;
-		top:0%;
-		text-align:center;
-		font-size: 1.2em;
-	}
-
 	#header{
 		position:relative;
 		background-color:#B0C4DE;
@@ -111,11 +100,29 @@
 
 	#footer span{
 		position: relative;
-		top:50
+		top:50;
+	}
+	
+	/***** CSS for projects page *****/
+	.tab.home-button{
+		position:relative;
+		cursor:pointer;	
+		height:100%;
+		width:100%;
+		left:0%;
+		top:0%;
+		text-align:center;
+		font-size: 1.2em;
+	}
+	
+	.project-list{
+		position:relative;
+		overflow-x:auto;
+		top:2.5%;
 	}
 }
 
-@media screen and (min-width: 801px){	
+@media screen and (min-width: 800px){	
 	
 	#left-img-wrapper{
 		position:relative;
@@ -138,5 +145,23 @@
 		margin-top: auto;
 		margin-left: auto;
 		z-index:1;
+	}
+	
+	/***** CSS for projects page *****/
+	.tab.home-button{
+		position:relative;
+		cursor:pointer;	
+		height:100%;
+		width:100%;
+		left:0%;
+		top:0%;
+		text-align:center;
+		font-size: 1.2em;
+	}
+	
+	.project-list{
+		position:relative;
+		overflow-x:auto;
+		top:2.5%;
 	}
 }
